RESOLVED FIXED117276
[BlackBerry] Deleting the pendingSelectionCandidate on the wrong thread causes an assert.
https://bugs.webkit.org/show_bug.cgi?id=117276
Summary [BlackBerry] Deleting the pendingSelectionCandidate on the wrong thread cause...
gmak
Reported 2013-06-05 13:55:35 PDT
Move the deletion to webkit
Attachments
Patch with changelog (7.40 KB, patch)
2013-06-05 14:07 PDT, gmak
no flags
gmak
Comment 1 2013-06-05 14:07:13 PDT
Created attachment 203883 [details] Patch with changelog
Rob Buis
Comment 2 2013-06-05 14:09:31 PDT
Comment on attachment 203883 [details] Patch with changelog Looks good.
WebKit Commit Bot
Comment 3 2013-06-05 14:42:32 PDT
Comment on attachment 203883 [details] Patch with changelog Clearing flags on attachment: 203883 Committed r151241: <http://trac.webkit.org/changeset/151241>
WebKit Commit Bot
Comment 4 2013-06-05 14:42:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.