[BlackBerry] Deleting the pendingSelectionCandidate on the wrong thread causes an assert. https://bugs.webkit.org/show_bug.cgi?id=117276

Patch by Genevieve Mak <gmak@rim.com> on 2013-06-05
Reviewed by Rob Buis.

Reviewed Internally by Nima Ghanavatian.
PR #342399
Store and delete the selectionScrollView in webkit which is what we already do for
scrolling subframes.

* Api/InRegionScroller.cpp:
(BlackBerry::WebKit::InRegionScrollerPrivate::InRegionScrollerPrivate):
(BlackBerry::WebKit::InRegionScrollerPrivate::resetSelectionScrollView):
(WebKit):
(BlackBerry::WebKit::InRegionScrollerPrivate::clearDocumentData):
(BlackBerry::WebKit::InRegionScrollerPrivate::calculateInRegionScrollableAreasForPoint):
(BlackBerry::WebKit::InRegionScrollerPrivate::updateSelectionScrollView):
(BlackBerry::WebKit::InRegionScrollerPrivate::firstScrollableInRegionForNode):
* Api/InRegionScroller_p.h:
(InRegionScrollerPrivate):

Canonical link: https://commits.webkit.org/135520@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151241 268f45cc-cd09-0410-ab3c-d52691b4dbfc